2014-04-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* avrdude.1: Remove the note that users might edit the system-wide
	config file.  This file will be overwritten by the next
	installation, so it's not a good idea to manually modify it.
	Using the -C +file option is a much better way for user
	modifications.
	* doc/avrdude.texi: (Dito.)
	* avrdude.conf.in: Add a warning to not modify the file manually.

2014-03-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac (AC_INIT): Bump version for post-6.1.

2014-03-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac (AC_INIT): Bump version to 6.1.

2014-03-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* pgm.c (pgm_free): Cleanup police: destroy the p->usbpid
	list when freeing the programmer struct.

2014-03-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #40782: Verify errors for object size > 16 k on x32e5 due
	to typo in avrdude.conf
	* avrdude.conf.in (ATmega8E5, ATmega32E5): fix boot location

2014-02-28  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* avrdude.conf.in (atmelice, atmelice_pdi, atmelice_dw, atmelice_isp):
	New entries.
	* avrdude.1: Document the Atmel-ICE addition.
	* doc/avrdude.texi: (Dito.)
	* usbdevs.c (USB_DEVICE_ATMEL_ICE): New entry.

2014-02-28  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* main.c: Bump copyright year.

2014-02-28  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtag3.c (jtag3_recv): avoid memmov'ing more data than available

2014-02-27  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* avrdude.1: Documentation update for EDBG.
	* doc/avrdude.texi: (Dito.)

2014-02-27  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtag3.c: For EDBG protocol, always use 512-byte block I/O.  The
	lower layers will split this according to the EP's maxsize.  This
	makes it work over USB 1.1 connections (albeit very slowly, due to
	the interrupt transfers used).

2014-02-27  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* config_gram.y: Turn the usbpid parameter of the programmer into